[gd_scene load_steps=5 format=3 uid="uid://c0qyea0b6blue"]

[ext_resource type="Script" path="res://Scripts/opciones.gd" id="1_dxd0c"]
[ext_resource type="Texture2D" uid="uid://1qqonfun1vde" path="res://Imagenes/Inicio.png" id="2_iy2wq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clytu"]
bg_color = Color(0.0885599, 0.0885599, 0.0885599, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vn5e"]
bg_color = Color(0, 0, 0, 1)

[node name="Opciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxd0c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iy2wq")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -76.5
offset_right = 133.0
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Volumen" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/pressed = SubResource("StyleBoxFlat_clytu")
theme_override_styles/normal = SubResource("StyleBoxFlat_1vn5e")
text = "VOLUMEN"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/pressed = SubResource("StyleBoxFlat_clytu")
theme_override_styles/normal = SubResource("StyleBoxFlat_1vn5e")
text = "ATRAS"

[node name="HSlider" type="HSlider" parent="."]
visible = false
layout_mode = 0
offset_left = 335.0
offset_top = 428.0
offset_right = 810.0
offset_bottom = 444.0
min_value = -25.0
max_value = 20.0
step = 0.1

[connection signal="pressed" from="VBoxContainer/Volumen" to="." method="_on_volumen_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
